another possible video on mobile sizing fix

--- a/assets/less/jomi/single.less
+++ b/assets/less/jomi/single.less
@@ -13,7 +13,6 @@
 		   float: left;
 		   margin:0;
 		   padding:0;
-		   width: 100%;
 		}
 		#chapters{
 		   float: left;
@@ -165,6 +164,12 @@
 
 //* MOBILE
 
+@media (max-width: 768px) {
+	.single .video-area{
+		width:100%;
+	}
+}
+
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
 	.single{
@@ -183,14 +188,7 @@
 	}
 }
 /* Medium devices (desktops, 992px and up) */
-@media (min-width: 992px) { 
-	.single{
-		.video-area{
-			   .video-holder{
-			      width: auto;
-			   }
-		}
-	}   
+@media (min-width: 992px) {  
    .sidebar ul li a {
       padding: 10px 25px !important;
    }
